--- a/lib/style.css
+++ b/lib/style.css
@@ -12,7 +12,7 @@ body{
     display: grid;
     grid-template-rows: 0.3fr repeat(5, 0fr) 0.3fr repeat(3, 0fr);
     row-gap: 0.5rem;
-    width: 20vw;
+    width: 20rem;
     height: 100vh;
     background-color: #E63462;
 }
@@ -24,7 +24,7 @@ body{
     padding-left: 1rem;
     gap: 0.5rem;
     color: #f5f5f5;
-    font-size: 22px;
+    font-size: 1.2rem;
     font-weight: 700;
 }
 .header_image{
@@ -40,6 +40,7 @@ body{
     display: flex;
     align-items: center;
     height: 5vh;
+    width: 100%;
     gap: 1rem;
     padding-left: 1.5rem;
     background-color: #E63462;
@@ -47,38 +48,56 @@ body{
     border: none;
     font-size: 1rem;
     font-weight: 700;
-    transition: background-color 0.3s ease;
-    cursor: pointer;
+    transition: 0.3s;
 }
 .left_btn:hover{
     background-color: #FF6A8A;
+    cursor: pointer;
+}
+.right_container{
+    height: 100vh;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .right_header{
     width: 80vw;
+    height: 20vh;
+    overflow: hidden;
     display: grid;
     grid-template-columns: 1.3fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 0fr;
     background-color: #f5f5f5;
 }
+.user_pic{
+    height: 3.5rem;
+    width: 3.5rem;
+    border-radius: 50%;
+}
+.profile_pic{
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 50%;
+}
 .header_item{
-    width: 100%;
+    width: 100%;    
     display: flex;
     box-sizing: border-box;
     align-items: center;
     justify-content: left;
     padding-left: 3rem;
-    border: 1px solid salmon;
     gap: 1rem;
 }
 #input{
     width: 100%;
-    height: 25%;
+    height: 40%;
     border: none;    
     border-radius: 6px;
     background-color: #dfe6ee;
 }
 #profile{
-    padding-left: 6rem;
+    display: grid;
+    grid-template-columns: 0fr 0.4fr 1fr;
+    padding-left: 5rem;
 }
 #right_header_btn{
     display: flex;
@@ -91,9 +110,61 @@ body{
     border: none;
     background-color: #E63462;
     color: #f5f5f5;
+    transition: 0.3s;
 }
-.header_main{
+.right_btn:hover{
+    background-color: #FF6A8A;
+    cursor: pointer;
+}
+main, .header_main{
     display: grid;
-    padding-left: 3rem;
     grid-template-columns: 2fr 1fr;
+    column-gap: 2rem;
+    padding-left: 1rem;
+    padding-top: 1rem;
+}
+
+.right_content{
+    height: 83vh;
+}
+main{
+    box-sizing: border-box;
+    overflow: hidden;
+    height: 85vh;
+}
+
+.projects{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0fr 0fr 0fr;
+    column-gap: 1rem;
+    row-gap: 1rem;
+}
+.card{
+    display: flex;
+    height: 22vh; 
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+.card_border{
+    background-color: #E63462;
+    width: 0.5vw;
+}
+.card_content{
+    background-color: #f5f5f5;
+    flex-grow: 1;
+}
+.right_column{
+    display: grid;
+    grid-template-rows: 1fr 0fr 1fr;
+    row-gap: 1rem;
+    padding-bottom: 5.5rem;
+    padding-right: 1rem;
+}
+.column_card{
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
