--- a/lib/style.css
+++ b/lib/style.css
@@ -1,191 +1,273 @@
-body{
-    background-color: #dfe6ee;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
+body {
+  background-color: #dfe6ee;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
-p{
-    margin: 0;
-    padding: 0;
+p {
+  margin: 0;
+  padding: 0;
 }
-.container{
-    display: flex;
+.container {
+  display: flex;
 }
-.left_container{
-    display: grid;
-    grid-template-rows: 0.3fr repeat(5, 0fr) 0.3fr repeat(3, 0fr);
-    row-gap: 0.5rem;
-    width: 20vw;
-    height: 100vh;
-    background-color: #E63462;
+.left_container {
+  display: grid;
+  grid-template-rows: 0.3fr repeat(5, 0fr) 0.3fr repeat(3, 0fr);
+  row-gap: 0.5rem;
+  width: 20vw;
+  height: 100vh;
+  background-color: #e63462;
 }
 
-.left_header{
+.left_header {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding-left: 1rem;
+  gap: 0.5rem;
+  color: #f5f5f5;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.header_image {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+.left_btn_image {
+  height: 1.5rem;
+  padding-bottom: 0.3rem;
+}
+.left_btn {
+  display: flex;
+  align-items: center;
+  height: 5vh;
+  width: 20vw;
+  gap: 1rem;
+  padding-left: 1.5rem;
+  background-color: #e63462;
+  color: #f5f5f5;
+  border: none;
+  overflow: hidden;
+  font-size: 100%;
+  font-weight: 700;
+  transition: 0.3s;
+}
+.left_btn:hover {
+  background-color: #ff6a8a;
+  cursor: pointer;
+}
+.right_container {
+  height: 100vh;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.right_header {
+  width: 80vw;
+  height: 20vh;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1.3fr 1fr;
+  grid-template-rows: 1fr 0fr;
+  background-color: #f5f5f5;
+}
+.user_pic {
+  height: 3.5rem;
+  width: 3.5rem;
+  border-radius: 50%;
+}
+.profile_pic {
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 50%;
+}
+.header_item {
+  width: 100%;
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: left;
+  padding-left: 2vh;
+  padding-bottom: 2vh;
+  gap: 1rem;
+}
+#hithere {
+  font-size: 12px;
+}
+#input {
+  width: 100%;
+  height: 40%;
+  border: none;
+  border-radius: 6px;
+  background-color: #dfe6ee;
+}
+#profile {
+  display: grid;
+  grid-template-columns: 0fr 0fr 1fr;
+  padding-left: 20vw;
+  font-weight: bold;
+}
+#profile_text {
+  font-weight: bold;
+}
+#right_header_btn {
+  display: flex;
+  gap: 1.5vw;
+  padding-left: 10vw;
+}
+.right_btn {
+  width: 5rem;
+  height: 2rem;
+  border-radius: 16px;
+  border: none;
+  background-color: #e63462;
+  color: #f5f5f5;
+  transition: 0.3s;
+}
+.right_btn:hover {
+  background-color: #ff6a8a;
+  cursor: pointer;
+}
+main,
+.header_main {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  column-gap: 2rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+}
+
+.right_content {
+  height: 90vh;
+}
+main {
+  box-sizing: border-box;
+  overflow: hidden;
+  height: 85vh;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0fr 0fr 0fr;
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
+.card {
+  display: flex;
+  height: 25vh;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+.card_border {
+  background-color: #e63462;
+  width: 1vw;
+}
+.card_content {
+  background-color: #f5f5f5;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  padding: 1rem;
+}
+.card_btns{
     display: flex;
-    align-items: center;
-    justify-content: left;
-    padding-left: 1rem;
-    gap: 0.5rem;
-    color: #f5f5f5;
-    font-size: 1.2rem;
-    font-weight: 700;
-}
-.header_image{
-    width: 2.5rem;
-    height: 2.5rem;
-}
-.left_btn_image{
-    height: 1.5rem;
-    padding-bottom: 0.3rem;
-}
-.left_btn{
-    display: flex;
-    align-items: center;
-    height: 5vh;
-    width: 20vw;
-    gap: 1rem;
-    padding-left: 1.5rem;
-    background-color: #E63462;
-    color: #f5f5f5;
-    border: none;
-    overflow: hidden;
-    font-size: 100%;
-    font-weight: 700;
-    transition: 0.3s;
-}
-.left_btn:hover{
-    background-color: #FF6A8A;
-    cursor: pointer;
-}
-.right_container{
-    height: 100vh;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-.right_header{
-    width: 80vw;
-    height: 20vh;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns: 1.3fr 1fr;
-    grid-template-rows: 1fr 0fr;
-    background-color: #f5f5f5;
-}
-.user_pic{
-    height: 3.5rem;
-    width: 3.5rem;
-    border-radius: 50%;
-}
-.profile_pic{
-    height: 2.5rem;
-    width: 2.5rem;
-    border-radius: 50%;
-}
-.header_item{
-    width: 100%;    
-    display: flex;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: left;
-    padding-left: 2vh;
-    padding-bottom: 2vh;
-    gap: 1rem;
-}
-#hithere{
-    font-size: 12px;
-}
-#input{
+    align-items: end;
+    justify-content: end;
+    height: 100%;
     width: 100%;
-    height: 40%;
-    border: none;    
-    border-radius: 6px;
-    background-color: #dfe6ee;
+    gap: 1rem;
 }
-#profile{
-    display: grid;
-    grid-template-columns: 0fr 0fr 1fr;
-    padding-left: 20vw;
-}
-#right_header_btn{
-    display: flex;
-    gap: 1.5vw;
-    padding-left: 10vw;
-}
-.right_btn{
-    width: 5rem;
+.card_button{
     height: 2rem;
-    border-radius: 16px;
+    width: 2rem;
+    border-radius: 50%;
     border: none;
-    background-color: #E63462;
-    color: #f5f5f5;
-    transition: 0.3s;
-}
-.right_btn:hover{
-    background-color: #FF6A8A;
-    cursor: pointer;
-}
-main, .header_main{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 2rem;
-    padding-left: 1rem;
-    padding-top: 1rem;
-}
-
-.right_content{
-    height: 83vh;
-}
-main{
-    box-sizing: border-box;
-    overflow: hidden;
-    height: 85vh;
-}
-
-.projects{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0fr 0fr 0fr;
-    column-gap: 1rem;
-    row-gap: 1rem;
-}
-.card{
-    display: flex;
-    height: 22vh; 
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-}
-
-.card_border{
-    background-color: #E63462;
-    width: 0.5vw;
-}
-.card_content{
     background-color: #f5f5f5;
-    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card_button:hover{
+    background-color: #ccc;
+    cursor: pointer;
+    color: #f5f5f5;
+}
+.card_img_button{
+    height: 1.5rem;
+    width: 1.5rem;
+}
+#card_title {
+  font-weight: bolder;
+  padding-top: 1rem;
+}
+#card_text {
+  font-size: 0.8rem;
+  color: #666666;
+}
+.right_column {
+  display: grid;
+  grid-template-rows: 1fr 0fr 1fr;
+}
+#column_title {
+  padding-top: 2vh;
+  padding-bottom: 1vh;
+}
+.column_card {
+  display: grid;
+  grid-template-rows: repeat(9, 0fr);
+  grid-template-columns: 1fr;
+  row-gap: 0.5vh;
+  padding: 3vh;
+  padding-top: 4vh;
+  box-sizing: border-box;
+  background-color: #f5f5f5;
+  width: 20vw;
+  overflow: hidden;
+  height: 35vh;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  font-size: 2vh;
+}
+.divider {
+  border-top: 2px solid #bbb;
+  width: 100%;
+  margin-top: 3vh;
+}
+.trending_content {
+  display: grid;
+  grid-template-rows: 0fr 0fr 0fr 0fr;
+  row-gap: 2.5vh;
+  padding-left: 1.2rem;
+}
+.trending_card {
+  display: grid;
+  grid-template-columns: 0fr 1fr;
+  grid-template-rows: 0fr 0fr 0fr 0fr;
+  column-gap: 3vh;
+}
+.trending_text{
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: start;
-    padding: 1rem;
+    justify-content: center;
 }
-#card_title{
-    font-weight: bolder;
+.trending_name {
+  font-size: 0.7rem;
+  font-weight: 600;
 }
-#card_text{
-    font-size: 0.8rem;
+.trending_desc {
+  font-size: 0.7rem;
+  color: #666666;
 }
-.right_column{
-    display: grid;
-    grid-template-rows: 1fr 0fr 1fr;
-    row-gap: 1rem;
-    padding-bottom: 5.5rem;
-    padding-right: 1rem;
-}
-.column_card{
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+.column_profile_pic {
+  height: 5vh;
+  width: 5vh;
+  border-radius: 50%;
 }
